src/objects/Sales_Channel_Partner__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Channel Partners</relationshipLabel>
        <relationshipName>Sales_Channel_Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_1__c</fullName>
        <label>Address 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address_2__c</fullName>
        <label>Address 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Authorized_Market__c</fullName>
        <label>Authorized Market</label>
        <picklist>
            <picklistValues>
                <fullName>Automotive Aftermarket</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chem / Petrochem</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial / HVAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete Consolidation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irrigation / Water Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Municipal Water / Wastewater</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil &amp; Gas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Automation &amp; Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test &amp; Measurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fluid Power</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Authorized_Products__c</fullName>
        <label>Authorized Products</label>
        <picklist>
            <picklistValues>
                <fullName>Blancett</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concrete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cox Exact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cox Precision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impeller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dynasonics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flo-tech</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flow Dynamics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hedland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial Turbo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IOG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ModMAG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OP-Meter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Preso</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recordall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vortex (RCN)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coriolis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RCV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vision</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wyco</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Number__c</fullName>
        <label>Customer Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Source__c</fullName>
        <label>Data Source</label>
        <picklist>
            <picklistValues>
                <fullName>ACT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BigMachines</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BPCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DBA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FourthShift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pivotal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TDF</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Owner_ID__c</fullName>
        <externalId>true</externalId>
        <label>External Owner ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Industry__c</fullName>
        <label>Industry</label>
        <picklist>
            <picklistValues>
                <fullName>Building Automation / HVAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chemical / Petrochemical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General Industrial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Irrigation / Water Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Municipal Water / Waste Water</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil &amp; Gas Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Automation &amp; Control</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Test &amp; Measurement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fluid Power</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Office_Type__c</fullName>
        <label>Office Type</label>
        <picklist>
            <picklistValues>
                <fullName>Branch Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Main Office</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Parent_Company_External_ID__c</fullName>
        <externalId>true</externalId>
        <label>Parent Company External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Credit_Number__c</fullName>
        <label>Sales Credit Number</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sales_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Territory</label>
        <referenceTo>Sales_Territory__c</referenceTo>
        <relationshipLabel>Sales Channel Partners</relationshipLabel>
        <relationshipName>Sales_Channel_Partners</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website__c</fullName>
        <label>Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Zip_Code__c</fullName>
        <label>Zip Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <label>Sales Channel Partner</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Country__c</columns>
        <columns>Customer_Number__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>Authorized_Market__c</columns>
        <columns>Authorized_Products__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>BadgerMeterMag</fullName>
        <columns>NAME</columns>
        <columns>Customer_Number__c</columns>
        <columns>Address_1__c</columns>
        <columns>Address_2__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Authorized_Market__c</columns>
        <columns>Authorized_Products__c</columns>
        <columns>Sales_Territory__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Authorized_Products__c</field>
            <operation>includes</operation>
            <value>MODMAG</value>
        </filters>
        <label>MODMAG</label>
        <sharedTo>
            <group>All_Customer_Service_Reps</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Blancett</fullName>
        <columns>NAME</columns>
        <columns>Customer_Number__c</columns>
        <columns>Address_1__c</columns>
        <columns>Address_2__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Authorized_Market__c</columns>
        <columns>Authorized_Products__c</columns>
        <columns>Sales_Territory__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Authorized_Products__c</field>
            <operation>includes</operation>
            <value>Blancett</value>
        </filters>
        <label>Blancett</label>
        <sharedTo>
            <group>All_Customer_Service_Reps</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Coriolis</fullName>
        <columns>NAME</columns>
        <columns>Customer_Number__c</columns>
        <columns>Address_1__c</columns>
        <columns>Address_2__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Authorized_Market__c</columns>
        <columns>Authorized_Products__c</columns>
        <columns>Sales_Territory__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Authorized_Products__c</field>
            <operation>includes</operation>
            <value>RCT</value>
        </filters>
        <label>RCT</label>
        <sharedTo>
            <group>All_Customer_Service_Reps</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>CoxPrecisionandCoxExact</fullName>
        <columns>NAME</columns>
        <columns>Customer_Number__c</columns>
        <columns>Address_1__c</columns>
        <columns>Address_2__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Authorized_Market__c</columns>
        <columns>Authorized_Products__c</columns>
        <columns>Sales_Territory__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Authorized_Products__c</field>
            <operation>includes</operation>
            <value>Cox Precision</value>
        </filters>
        <filters>
            <field>Authorized_Products__c</field>
            <operation>includes</operation>
            <value>Cox Exact</value>
        </filters>
        <label>Cox Precision and Cox Exact</label>
        <sharedTo>
            <group>All_Customer_Service_Reps</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DataIndustrialImpeller</fullName>
        <columns>NAME</columns>
        <columns>Customer_Number__c</columns>
        <columns>Address_1__c</columns>
        <columns>Address_2__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Authorized_Market__c</columns>
        <columns>Authorized_Products__c</columns>
        <columns>Sales_Territory__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Authorized_Products__c</field>
            <operation>includes</operation>
            <value>Impeller</value>
        </filters>
        <label>DIC</label>
        <sharedTo>
            <group>All_Customer_Service_Reps</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Dynasonics</fullName>
        <columns>NAME</columns>
        <columns>Customer_Number__c</columns>
        <columns>Address_1__c</columns>
        <columns>Address_2__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Authorized_Market__c</columns>
        <columns>Authorized_Products__c</columns>
        <columns>Sales_Territory__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Authorized_Products__c</field>
            <operation>includes</operation>
            <value>Dynasonics</value>
        </filters>
        <label>Dynasonics</label>
        <sharedTo>
            <group>All_Customer_Service_Reps</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Flotech</fullName>
        <columns>NAME</columns>
        <columns>Customer_Number__c</columns>
        <columns>Address_1__c</columns>
        <columns>Address_2__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Authorized_Market__c</columns>
        <columns>Authorized_Products__c</columns>
        <columns>Sales_Territory__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Authorized_Products__c</field>
            <operation>includes</operation>
            <value>Flo-tech</value>
        </filters>
        <label>Flo-tech</label>
        <sharedTo>
            <group>All_Customer_Service_Reps</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Preso</fullName>
        <columns>NAME</columns>
        <columns>Customer_Number__c</columns>
        <columns>Address_1__c</columns>
        <columns>Address_2__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Authorized_Market__c</columns>
        <columns>Authorized_Products__c</columns>
        <columns>Sales_Territory__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Authorized_Products__c</field>
            <operation>includes</operation>
            <value>Preso</value>
        </filters>
        <label>Preso</label>
        <sharedTo>
            <group>All_Customer_Service_Reps</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>RacineVortex</fullName>
        <columns>NAME</columns>
        <columns>Customer_Number__c</columns>
        <columns>Address_1__c</columns>
        <columns>Address_2__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Authorized_Market__c</columns>
        <columns>Authorized_Products__c</columns>
        <columns>Sales_Territory__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Authorized_Products__c</field>
            <operation>includes</operation>
            <value>Vortex (RCN)</value>
        </filters>
        <label>Vortex (RCN)</label>
        <sharedTo>
            <group>All_Customer_Service_Reps</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Recordall</fullName>
        <columns>NAME</columns>
        <columns>Customer_Number__c</columns>
        <columns>Address_1__c</columns>
        <columns>Address_2__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Authorized_Market__c</columns>
        <columns>Authorized_Products__c</columns>
        <columns>Sales_Territory__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Authorized_Products__c</field>
            <operation>includes</operation>
            <value>Recordall</value>
        </filters>
        <label>Recordall</label>
        <sharedTo>
            <group>All_Customer_Service_Reps</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>ResearchControlValve</fullName>
        <columns>NAME</columns>
        <columns>Customer_Number__c</columns>
        <columns>Address_1__c</columns>
        <columns>Address_2__c</columns>
        <columns>City__c</columns>
        <columns>State__c</columns>
        <columns>Zip_Code__c</columns>
        <columns>Authorized_Market__c</columns>
        <columns>Authorized_Products__c</columns>
        <columns>Sales_Territory__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Authorized_Products__c</field>
            <operation>includes</operation>
            <value>RCV</value>
        </filters>
        <label>RCV</label>
        <sharedTo>
            <group>All_Customer_Service_Reps</group>
            <group>Sales_Group_Valves</group>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Partner Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Channel Partners</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>